--- a/kd322_b testprojekt/.project
+++ b/kd322_b testprojekt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kd322_b testprojekt</name>
+	<name>kd322b_testprojekt</name>
 	<comment></comment>
 	<projects>
 	</projects>
